# vertical_video_convertor

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.in  requirements.txt  setup.py
examples/: convert_video.py  demo.py
src/vertical_video_converter/: __init__.py  cli.py  converter.py  cropping.py  face_tracker.py  scene_detector.py  smoothing.py  video_reader.py  video_writer.py
tests/: test_cropping.py  test_face_tracker.py  test_preview.py  test_scene_detector.py  test_smoothing.py
