[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertical_video_converter"
version = "0.1.0"
description = "Video conversion to vertical format using face detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ashish Nagar", email = "ashishnagar31@gmail.com" },
]
dependencies = [
    "insightface==0.7.3",
    "opencv-python==4.8.0.74",
    "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "pip-tools>=7.3.0",
]
gpu = [
    "onnxruntime-gpu==1.14.1",
]
cpu = [
    "onnx==1.14.0",
    "onnxruntime==1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vertical_video_converter"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 310

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
python_files = ["test_*.py"]
python_version = "3.10"