[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertical-video-converter"
version = "1.0.0"
description = "Convert horizontal videos (podcasts, interviews, talks) to vertical with automatic face tracking"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Ashish Nagar", email = "ashishnagar31@gmail.com" },
]
keywords = ["video", "vertical", "shorts", "reels", "face-detection", "face-tracking", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "insightface>=0.7.3",
    "opencv-python>=4.10",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.20",
]
gpu = [
    "onnxruntime-gpu>=1.20",
]

[project.scripts]
vvc = "vertical_video_converter.cli:main"

[project.urls]
Repository = "https://github.com/algometrix/vertical_video_convertor"
Issues = "https://github.com/algometrix/vertical_video_convertor/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vertical_video_converter"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
